--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -71,6 +71,7 @@
                     android:text="Xem thêm"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
+                    android:id="@+id/tv_show_more_boy"
                     android:textStyle="italic" />
 
             </TableRow>
@@ -106,6 +107,7 @@
                     android:text="Xem thêm"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
+                    android:id="@+id/tv_show_more_girl"
                     android:textStyle="italic" />
 
             </TableRow>
@@ -142,6 +144,7 @@
                     android:text="Xem thêm"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
+                    android:id="@+id/tv_show_more_solo"
                     android:textStyle="italic" />
 
             </TableRow>
