--- a/app/src/main/res/layout/item_recycle_home.xml
+++ b/app/src/main/res/layout/item_recycle_home.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:padding="16dp"
+    android:id="@+id/linear_item_idol"
     android:layout_height="wrap_content">
 
     <de.hdodenhof.circleimageview.CircleImageView
